# rust-slint-printdemo

./: Cargo.toml  README.md
.cargo/: config.toml
mcu-board-support/: Cargo.toml  build.rs  esp32_s3_box_3.rs  gt911.rs  lib.rs
printerdemo_mcu/: Cargo.toml
