# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.2 OR LicenseRef-Slint-commercial

[workspace]
members = [
    'printerdemo_mcu',
    'mcu-board-support',   
]

resolver="2"

[workspace.package]
description = "GUI toolkit to efficiently develop fluid graphical user interfaces for embedded devices and desktop applications"
authors = ["Slint Developers <info@slint.dev>"]
documentation = "https://slint.dev/docs"
edition = "2021"
homepage = "https://slint.dev"
keywords = ["gui", "toolkit", "graphics", "design", "ui"]
license = "GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.2 OR LicenseRef-Slint-commercial"
repository = "https://github.com/slint-ui/slint"
rust-version = "1.73"
version = "1.6.0"

[profile.release]
lto = true
panic = "abort"
debug =true

[profile.dev]
panic = "abort"

