# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "mcu-board-support"
version = "1.6.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
license = "MIT"
publish = false
description = "Internal helper that includes support for different MCUs, for use in Slint examples"
repository = "https://github.com/slint-ui/slint"
homepage = "https://slint.dev"
links = "mcu_board_support" # just so we can pass metadata to the slint build crate

[lib]
path = "lib.rs"

[features]
default = ["esp32-s3-box-3"]
esp32-s3-box-3 = ["slint/unsafe-single-threaded", "esp32s3-hal", "embedded-hal", "xtensa-lx-rt/esp32s3", "esp-alloc", "esp-println/esp32s3", "esp-backtrace/esp32s3", "display-interface", "display-interface-spi", "mipidsi", "embedded-graphics-core", "embedded-graphics", "slint/libm"]

[dependencies]
slint = { version = "=1.6.0", default-features = false, features = ["compat-1-2", "renderer-software"] }
i-slint-core-macros = { version = "=1.6.0" }

embedded-hal = { package = "embedded-hal", version = "0.2.5", optional = true }
esp32s3-hal = { version = "0.12", optional = true }
xtensa-lx-rt = { version = "0.16", optional = true }
esp-alloc = { version = "0.3", optional = true }
esp-println = { version = "0.7.0", optional = true }
esp-backtrace = { version = "0.9.0", optional = true, features = ["panic-handler", "print-uart"] }
display-interface = { version = "0.4.1", optional = true }
display-interface-spi = { version = "0.4", optional = true }
mipidsi = { version = "0.7.1", optional = true }
embedded-graphics-core =  { version = "0.4", optional = true }
embedded-graphics = { version = "0.8.1", optional = true }

[build-dependencies]
cfg-if = "1.0.0"
